# TentacleOS

./: .gitignore  .releaserc.js  .releaserc.json  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.pt.md  commitlint.config.js  png_conversor_to_bin.ps1  sdkconfig  sdkconfig.old
components/Applications/: CMakeLists.txt
components/Applications/SubGhz/: subghz_receiver.c  subghz_spectrum.c
components/Applications/SubGhz/include/: subghz_receiver.h
components/Applications/SubGhz/protocols/: protocol_ansonic.c  protocol_came.c  protocol_chamberlain.c  protocol_linear.c  protocol_nice_flo.c  protocol_rcswitch.c  subghz_protocol_registry.c
components/Applications/SubGhz/protocols/include/: subghz_protocol_registry.h
components/Applications/bad_usb/: bad_usb.c  ducky_parser.c  hid_hal.c  hid_layouts.c
components/Applications/bad_usb/include/: hid_hal.h
components/Applications/bluetooth/: ble_scanner.c  ble_sniffer.c  gatt_explorer.c
components/Applications/bluetooth/include/: ble_screen_server.h
components/Applications/ui/: ui_manager.c
components/Applications/ui/components/button/: button_ui.c
components/Applications/ui/components/footer/: footer_ui.c
components/Applications/ui/components/header/: header_ui.c
components/Applications/ui/components/message_box/: msgbox_ui.c
components/Applications/ui/components/terminal/: terminal_ui.c
components/Applications/ui/include/: assets_manager.h  ui_manager.h
components/Applications/ui/screens/SubGhz/: subghz_spectrum_ui.c
components/Applications/ui/screens/about_settings/: about_settings_ui.c
components/Applications/ui/screens/badusb/: ui_badusb_browser.c  ui_badusb_connect.c  ui_badusb_layout.c  ui_badusb_menu.c  ui_badusb_running.c
components/Applications/ui/screens/battery_settings/: battery_settings_ui.c
components/Applications/ui/screens/bluetooth/: ui_ble_spam_select.c
components/Applications/ui/screens/boot/: boot_ui.c
components/Applications/ui/screens/connect_wifi/: connect_wifi_ui.c
components/Applications/ui/screens/connection_settings/: connection_settings_ui.c
components/Applications/ui/screens/display_settings/: display_settings_ui.c
components/Applications/wifi/: ap_scanner.c  client_scanner.c  deauther_detector.c  evil_twin.c  signal_monitor.c  target_scanner.c  wifi_deauther.c  wifi_sniffer.c
components/Applications/wifi/include/: ap_scanner.h  deauther_detector.h  target_scanner.h  wifi_deauther.h  wifi_sniffer.h
firmware_c5/components/Applications/: CMakeLists.txt
firmware_c5/components/Applications/SubGhz/: subghz_transmitter.c
firmware_c5/components/Applications/bluetooth/: ble_connect_flood.c  ble_hid_keyboard.c  ble_l2cap_flood.c  ble_scanner.c  ble_screen_server.c  canned_spam.c  gatt_explorer.c
firmware_c5/components/Applications/espnow_chat/: espnow_chat.c
firmware_c5/components/Applications/ui/: README.md  assets_manager.c
firmware_c5/components/Applications/wifi/: ap_scanner.c  client_scanner.c  evil_twin.c  probe_monitor.c  target_scanner.c  wifi_sniffer.c
(+599 files in other folders)
